fixing table spacing

--- a/src/css/table_view.css
+++ b/src/css/table_view.css
@@ -1,48 +1,50 @@
+.table_view table.heading {
+  border-width:1px;
+}
+
 .table_view table {
   text-align:left;
   width:100%;
   border-collapse:collapse;
+  border-style:solid;
+  border-color:#444;
 }
 
 .table_view table th {
   padding:0;
   margin:0;
-}
-
-.table_view .heading .wrapper {
-  border-width:1px 0 1px 1px;
-  border-style:solid;
-  border-color:#444;
   background-color:#eee;
 }
 
-.table_view .heading .last .wrapper {
-  border-width:1px 1px 1px 1px;
+.table_view th.first {
+  padding-left:5px;
+  border-left:none;
+}
+
+.table_view th.last {
+  padding-right:5px;
 }
 
 .table_view .content{
-  border-style:solid;
-  border-color:#444;
-  border-width:0 1px 1px 1px;
-  padding:5px;
   background-color:#fff;
+  border-width:0 1px 1px 1px;
+  border-color:#444;
+  border-style:solid;
+  padding:5px;
 }
 
 .table_view .wrapper {
-  padding:5px 10px;
+  border-style:solid;
+  border-color:#444;
+  padding:5px;
+}
+
+.table_view tr.first .wrapper {
 }
 
 .table_view .content td {
   white-space:nowrap;
   overflow:hidden;
-}
-
-.table_view .content td.first > .wrapper {
-  padding-left:5px;
-}
-
-.table_view .content td.last > .wrapper {
-  margin-right:5px;
 }
 
 .table_view.clickable .content tr:hover .wrapper {
